quick and dirty hack to only return subscriptions matching an email address in the `subscriptions/:listId` API endpoint

--- a/views/users/api.hbs
+++ b/views/users/api.hbs
@@ -56,6 +56,7 @@
     <li><strong>access_token</strong> – {{#translate}}your personal access token{{/translate}}
     <li><strong>start</strong> – {{#translate}}Start position{{/translate}} (<em>{{#translate}}optional, default 0{{/translate}}</em>)</li>
     <li><strong>limit</strong> – {{#translate}}limit subscription count in response{{/translate}} (<em>{{#translate}}optional, default 10000{{/translate}}</em>)</li>
+    <li><strong>email</strong> – {{#translate}}only display rows where the email-address matches{{/translate}} (<em>{{#translate}}optional, default NULL{{/translate}}</em>). <strong>{{#translate}}Attention{{/translate}}: </strong>{{#translate}}The result is filtered after <em>start</em> and <em>limit</em> have already been applied{{/translate}}</li>
 </ul>
 
 <p>
